--- a/app/templates/blog/post_detail.html
+++ b/app/templates/blog/post_detail.html
@@ -1,3 +1,11 @@
+{% extends "base.html"%}
+
+{% block content %}
+<ol class="breadcrumb">
+  <li><a href="{% url 'home' %}">Posts</a></li>
+  <li class="active">{{ post.title }}</li>
+</ol>
+
 <h1>{{ post.title }}</h1>
 
 <div>
@@ -10,4 +18,4 @@
   {{ post.body }}
 </div>
 
-<a href="{% url 'home' %}">Post list</a>
+{% endblock %}
