--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" media="screen" />
     <style>
       body { padding-top: 70px; padding-bottom: 70px; }
+      .sidebar-module-inset { padding: 15px; background-color: #f5f5f5; border-radius: 4px; }
       {% block css %}{% endblock %}
     </style>
   </head>
@@ -19,7 +20,29 @@
   <body>
     <div class="container">
       <div class="row">
-        {% block head %}{% endblock %}
+        {% block head %}
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">My django-blog!</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <form class="navbar-form navbar-right" role="search" action="http://google.com/search" method="get">
+                <div class="form-group">
+                  <input type="hidden" name="sitesearch" value="{{ site_url_without_http }}">
+                  <input type="text" class="form-control" placeholder="Search">
+                </div>
+              </form>
+            </div><!--/.navbar-collapse -->
+          </div>
+        </nav>
+        {% endblock %}
       </div>
       <div class="row">
         <div class="col-sm-8">
@@ -27,11 +50,11 @@
         </div>
         <div class="col-sm-3 col-sm-offset-1">
           {% if tags %}
-          <div class="sidebar-module">
+          <div class="sidebar-module sidebar-module-inset">
             <h4>Tags</h4>
             <ol class="list-unstyled">
               {% for tag in tags %}
-              <li><a href="#">{{ tag }}</a></li>
+              <li><a href="{% url 'tag_detail' tag.id %}">{{ tag }}</a></li>
               {% endfor %}
             </ol>
           </div>
@@ -39,15 +62,22 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="{% static 'jquery.js' %}"></script>
-    <script type="text/javascript" src="{% static 'jquery-ui.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript">
       {% block javascript %}{% endblock %}
     </script>
   </body>
 
   <foot>
-    {% block foot %}{% endblock %}
+    {% block foot %}
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <div class="nav navbar-nav pull-right">
+          <p>
+            Based on <a href="">Django-blog</a>, a tutorial from <a href="http://magmax.org">http://magmax.org</a>
+            </p>
+        </div>
+      </div>
+    </nav>
+    {% endblock %}
   </foot>
 </html>
