--- a/app/templates/blog/post_list.html
+++ b/app/templates/blog/post_list.html
@@ -1,34 +1,55 @@
 {% extends "base.html"%}
 
 {% block content %}
-<ul class="list-unstyled">
-  {% for post in post_list %}
-  <li><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+{% for post in post_list %}
+<article>
+  <header>
+    <h1>
+      <a href="{% url 'post_detail' post.id %}">{{ post.title }}</a>
+      <br />
+      <small><span class="glyphicon glyphicon-calendar"></span>{{ post.updated }}</small>
+    </h1>
+  </header>
+  <content>
+    <div>
+      {{ post.teaser }}
+    </div>
+    <div>
+      <a href="{% url 'post_detail' post.id %}" class="btn btn-default pull-right">Read more...</a>
+    </div>
+  </content>
+  <br />
+  <hr />
+  <br />
+</article>
+{% endfor %}
 
 <div>
   <nav>
     <ul class="pager">
-      <li>
-        {% if page_obj.has_previous %}
+      {% if page_obj.has_previous %}
+      <li class="previous">
         <a href="{% url 'home' %}?page={{ page_obj.previous_page_number }}">
           <span>&laquo; Previous</span>
         </a>
-        {% else %}
-        <span>&laquo; Previous</span>
-        {% endif %}
       </li>
+      {% else %}
+      <li class="previous disabled">
+        <span>&laquo; Previous</span>
+      </li>
+      {% endif %}
 
-      <li>
-        {% if page_obj.has_next %}
+      {% if page_obj.has_next %}
+      <li class="next">
         <a href="{% url 'home' %}?page={{ page_obj.next_page_number }}">
           <span>Next &raquo;</span>
         </a>
-        {% else %}
-        <span>Next &raquo;</span>
-        {% endif %}
       </li>
+      {% else %}
+      <li class="next disabled">
+        <span class="disabled">Next &raquo;</span>
+      </li>
+      {% endif %}
     </ul>
   </nav>
 </div>
